# nta-lab2

./: Dockerfile  README.md  pyproject.toml
nta_lab2/: D1IntArray.py  __main__.py  _task_interop.py  bruteforce.py  sph.py
report/: common.sty  report.tex
tests/: samples.py  test_bruteforce.py  test_sph.py
